# claude-cowork-linux-client

./: .env.example  .gitignore  API-OPTIONS.md  COWORK_LINUX_SPECIFICATION.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  package.json  status.md  tauri.conf.json
backend/: .env.example  database.py  main.py  requirements.txt  task_manager.py  ws_manager.py
src-frontend/: index.html  package-lock.json  package.json  vite.config.ts
src-frontend/src/: App.css  App.tsx
src-frontend/src/components/: TaskForm.tsx  TaskList.tsx
src-frontend/src/pages/: TaskHistory.tsx
src-frontend/src/utils/: api.ts  notifications.ts  validation.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
