[package]
name = "cowork"
version = "0.0.1"
description = "Claude Cowork - Desktop app for autonomous task execution"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
